syntax = "proto3";

import "education/common/proto/education_common.proto";

option java_package = "com.jcs.education.lesson.service.proto.v1";
option java_multiple_files = true;

service EducationLessonService {
  rpc GetLessons(GetLessonsRequest) returns (GetLessonsResponse);
}

message GetLessonsRequest {
  uint32 course_unit_id = 1;
}

message GetLessonsResponse {
  repeated education.common.Lesson lessons = 1;
}